fix whitespace

--- a/static/css/spaces.css
+++ b/static/css/spaces.css
@@ -5,6 +5,8 @@ html, body {
   padding: 0;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, Arial ,'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
+
 }
 #center-panel{
   margin: 0 auto;
